"Zmenena cesta programu v launch.json na /build/src/asciid.exe"

--- a/cvicenia/02/.vscode/launch.json
+++ b/cvicenia/02/.vscode/launch.json
@@ -5,7 +5,7 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/main.exe",
+            "program": "${workspaceFolder}/build/src/asciid.exe",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
