--- a/cvicenia/03-turtlepreter/lib/external/CMakeLists.txt
+++ b/cvicenia/03-turtlepreter/lib/external/CMakeLists.txt
@@ -1,5 +1,13 @@
 include(FetchContent)
 
+
+FetchContent_Declare(
+  lib-nlohmann
+  GIT_REPOSITORY https://github.com/nlohmann/json.git
+  GIT_TAG v3.12.0
+  SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/nlohmann
+)
+
 FetchContent_Declare(
     lib-glad
     GIT_REPOSITORY http://gitlab.kicon.fri.uniza.sk/mrena/lib-glad.git
@@ -35,3 +43,5 @@ FetchContent_MakeAvailable(lib-glfw)
 FetchContent_MakeAvailable(lib-imgui)
 
 FetchContent_MakeAvailable(lib-stb)
+
+FetchContent_MakeAvailable(lib-nlohmann)
